deploy/vhr-charts/vhr-chart/templates/vhr-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    io.kompose.service: vhr-backend
  name: vhr-backend
spec:
  ports:
    - name: "http"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: vhr-backend
