deploy/vhr-charts/vhr-chart/templates/vhr-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f dockerCompose.yaml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: vhr-ui
  name: vhr-ui
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: vhr-ui
