deploy/vhr-charts/vhr-chart/templates/vhr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vhr-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vhr.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vhr-ui
            port:
              number: 80
